# glossa

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-release-tarball.sh  install.sh  uninstall.sh  update.sh
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
contrib/dotool/: README.md
contrib/dotool/binary/: dotool
contrib/dotool/source/dotool/: CHANGELOG.md  README.md  build.sh  dotool.go  keys.go
contrib/examples/: config.toml
contrib/release/: glossa-update.sh
contrib/systemd/: dotool.service  glossa.service
crates/glossa-app/: Cargo.toml
crates/glossa-app/src/: error.rs  lib.rs
crates/glossa-app/src/machine/: actions.rs  guards.rs  mod.rs  reducer.rs
crates/glossa-app/src/ports/: audio_capture.rs  clipboard.rs  command_source.rs  cue_player.rs  mod.rs  paste_backend.rs  silence_trimmer.rs  stt_client.rs  temp_store.rs  text_enhancer.rs  tray.rs
crates/glossa-app/src/services/: app_actor.rs  command_router.rs  mod.rs  recording_pipeline.rs  status_store.rs
crates/glossa-audio/: Cargo.toml
crates/glossa-audio/src/: lib.rs
crates/glossa-audio/src/capture/: active_recording.rs  cpal_capture.rs  mod.rs  sample_convert.rs
crates/glossa-audio/src/cue/: mod.rs  rodio_player.rs
crates/glossa-audio/src/trim/: energy_gate.rs  mod.rs
crates/glossa-audio/src/wav/: mod.rs  reader.rs
crates/glossa-bin/: Cargo.toml
crates/glossa-bin/src/: bootstrap.rs  cli.rs  main.rs
crates/glossa-bin/src/cmd/: ctl.rs  daemon.rs  doctor.rs  mod.rs  service.rs  status.rs  update.rs
crates/glossa-core/: Cargo.toml
crates/glossa-core/src/: audio.rs  command.rs  error.rs  ids.rs  lib.rs  paste.rs  provider.rs  state.rs  status.rs
crates/glossa-core/src/config/: audio.rs  input.rs  llm.rs  logging.rs  mod.rs  paste.rs  provider.rs  ui.rs
crates/glossa-platform-linux/: Cargo.toml
crates/glossa-platform-linux/src/: dialog.rs  lib.rs  service.rs  shortcut_capture.rs  updater.rs
crates/glossa-platform-linux/src/clipboard/: mod.rs  wl_copy.rs
crates/glossa-platform-linux/src/doctor/: checks.rs  mod.rs  report.rs
crates/glossa-platform-linux/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/glossa-platform-linux/src/paste/: dotool.rs  mod.rs
crates/glossa-platform-linux/src/portal/: escape_cancel.rs  evdev_monitor.rs  mapping.rs  mod.rs  shortcut_source.rs
crates/glossa-platform-linux/src/temp/: mod.rs  xdg_temp_store.rs
crates/glossa-platform-linux/src/tray/: mod.rs  settings.rs  settings_dialog.rs  tray_port.rs
crates/glossa-stt/: Cargo.toml
crates/glossa-stt/src/: client.rs  compatible.rs  dto.rs  factory.rs  groq.rs  lib.rs  llm_enhancer.rs  openai.rs
