[package]
name = "glossa-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
camino.workspace = true
cpal.workspace = true
hound.workspace = true
rodio.workspace = true
tokio.workspace = true
tracing.workspace = true
glossa-app = { path = "../glossa-app" }
glossa-core = { path = "../glossa-core" }

[lints]
workspace = true
