[package]
name = "glossa-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
glossa-app = { path = "../glossa-app" }
glossa-core = { path = "../glossa-core" }

[lints]
workspace = true
