[package]
name = "glossa-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-io = "=2.4.1"
async-lock = "=3.4.0"
ashpd.workspace = true
async-trait.workspace = true
camino.workspace = true
evdev = { version = "0.13.2", features = ["tokio"] }
futures-util = "=0.3.32"
gtk.workspace = true
png.workspace = true
proc-macro-crate = "=3.1.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tray-icon.workspace = true
glossa-app = { path = "../glossa-app" }
glossa-core = { path = "../glossa-core" }

[lints]
workspace = true
